<resources>
    <string name="app_name">Demo MVVM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">مهدی العباسیان</string>
    <string name="nav_header_subtitle">09109615748</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">خانه</string>
    <string name="menu_category">دسته بندی</string>
    <string name="menu_profile">پروفایل</string>
    <string name="menu_support">پشتیبانی</string>
    <string name="menu_aboutTeam">درباره‌ما</string>
    <string name="menu_questions">سوالات متداول و قوانین</string>
    <string name="menu_quit">خروج</string>
    <string name="actionBarMenu">actionBarMenu</string>
    <string name="searchActionBar">searchActionBar</string>
    <string name="sliderName">name</string>
    <string name="contentMovie">imgMovie</string>
    <string name="contentIcVideo">icVideo</string>
    <string name="nameMovie">Name Movie</string>

</resources>