<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="130dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:padding="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:cardElevation="-1dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:id="@+id/imgMovie"
                android:contentDescription="@string/contentMovie" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_marginTop="1dp"
            app:srcCompat="@drawable/ic_video"
            android:contentDescription="@string/contentIcVideo" />

        <TextView
            android:singleLine="true"
            android:id="@+id/nameMovie"
            android:layout_marginStart="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/nameMovie"
            android:textColor="@color/textColorMostItem"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>