<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:srcCompat="@drawable/ic_nav_header_top"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/nav_header_vertical_spacing"
        android:src="@mipmap/ic_launcher_round"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/white"/>

    <TextView
        android:id="@+id/txtNavProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:textColor="@color/textColorNav"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/txtNavProfileNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/textColorNav"
        android:text="@string/nav_header_subtitle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFD1D5"/>

</LinearLayout>